--- a/SnekConfig.json
+++ b/SnekConfig.json
@@ -183,6 +183,46 @@
       ]
     },
     {
+      "modeId": "MODE_PROJECT_M",
+      "socdPairs": [
+        {
+          "buttonDir1": "BTN_LF3",
+          "buttonDir2": "BTN_LF1",
+          "socdType": "SOCD_NEUTRAL"
+        },
+        {
+          "buttonDir1": "BTN_LF2",
+          "buttonDir2": "BTN_RF4",
+          "socdType": "SOCD_NEUTRAL"
+        },
+        {
+          "buttonDir1": "BTN_RT3",
+          "buttonDir2": "BTN_RT5",
+          "socdType": "SOCD_NEUTRAL"
+        },
+        {
+          "buttonDir1": "BTN_RT2",
+          "buttonDir2": "BTN_RT4",
+          "socdType": "SOCD_NEUTRAL"
+        }
+      ],
+      "buttonRemapping": [
+        {
+          "physicalButton": "BTN_LF5",
+          "activates": "BTN_LF14"
+        },
+        {
+          "physicalButton": "BTN_RF8",
+          "activates": "BTN_RF16"
+        }
+      ],
+      "activationBinding": [
+        "BTN_LT1",
+        "BTN_MB1",
+        "BTN_RF8"
+      ]
+    },
+    {
       "modeId": "MODE_FGC",
       "socdPairs": [
         {
